Removed various loggers and made whitespace consistent, changed layout of the notifications so they are instead in a vertical scrollbar instead of a grid, fixed broken cucumber test caused by modifications to watering logic